add JavaDoc to Server.java